retrieveUnpackaged/objects/Test_Case_Step__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Behaviour__c</fullName>
        <label>Expected Behaviour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters_Data__c</fullName>
        <label>Parameters/Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <label>Step Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Case__c</fullName>
        <label>Test Case</label>
        <referenceTo>Test_Case__c</referenceTo>
        <relationshipLabel>Test Case Steps</relationshipLabel>
        <relationshipName>Test_Case_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Case Step</label>
    <nameField>
        <displayFormat>TCS-{000000}</displayFormat>
        <label>Test Case Step</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>